导航head登录和首页不在一行1

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -5,9 +5,9 @@
 ul,ol{
 	list-style: none;
 }
-img{
-	display: block;
-}
+/*img{*/
+/*	display: block;*/
+/*}*/
 a{
 	text-decoration: none;
 	color: #646464;
