--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -12,9 +12,9 @@ a{
 	text-decoration: none;
 	color: #646464;
 }
-h1,h2,h3{
-	font-size: 16px;
-}
+/*h1,h2,h3{*/
+/*	font-size: 16px;*/
+/*}*/
 .l{
 	float: left;
 }
@@ -27,7 +27,7 @@ h1,h2,h3{
 	clear: both;
 }
 .banxin{
-	width: 1200px;
+	width: 1400px;
 	margin: 0 auto;
 	position: relative;
 }
